Add demo of flows using descriptor API.

--- a/users-new/src/main/resources/demo/client/local/builtin/BuiltinFlowsPage.html
+++ b/users-new/src/main/resources/demo/client/local/builtin/BuiltinFlowsPage.html
@@ -4,12 +4,10 @@
     </div>
     <div class="row inputs" style="text-align: center">
         <select data-field="flows">
-          <option selected disabled value>Select an entity type...</option>
+          <option selected disabled value>Select a flow...</option>
         </select>
     </div>
-    <div class="row inputs" style="text-align: center">
-      <a data-field="builtin">See Built-in Flows</a>
-    </div>
+    <div class="row inputs" data-field="flowContainer">
     <div class="row inputs text-center">
         <div class="blackened">
             &copy; 2015, powered by <a href="http://erraiframework.org/">Errai</a>, hosted on <a href="http://openshift.com">OpenShift by Red Hat</a>
